OC-69: feat(academics): one-click timetable generator + Academics nav/doc fixes
Adds the full timetable generator: new Classroom/Period masters, lab_schedules
generalized in-place into class_schedules (THEORY + LAB/CLINICAL), a
suggest-and-approve TimetableGenerationService with a redesigned overlap +
term-scoped conflict check (fixes a pre-existing lab-scheduling conflict bug),
PersonalTimetableService for /timetables/me with display-time-only holiday
annotation, and a new cms-week-grid shared component (first calendar UI in
this app) powering the draft-review, admin browse, and My Timetable screens.
Also fixes a pre-existing courseId/subjectId field-name mismatch on the Lab
Schedule form that likely broke every save on that screen.

Bundled with earlier same-session Academics fixes: wired the orphaned Course
Offerings/Elective Assignment screens into the nav, backfilled
lab_schedules.batch_id (V288), and corrected/extended
RELEASE_1_MILESTONES.md (new R1-M6 section for BR-49/52/53, R1-3.2.9
stale-checkbox correction).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>